# toyota-multimedia-2022

./: .gitignore  README.md
Linux/dlt-daemon/src/smoketest/: CMakeLists.txt  dlt-blockmode-test.sh  dlt-logstorage-test.sh  dlt-system-journal-test.sh  dlt_logstorage.conf
Linux/ipod/ipod-cinemo/: CMakeLists.txt
Linux/ipod/ipod-cinemo/config/: adit-ipod-cinemo.pc.in
Linux/ipod/ipod-cinemo/src/: CMakeLists.txt
Linux/ipod/ipod-cinemo/src/cinemo_audio_plugin/: ADIT-LICENSE.txt  AudioCommon.c  AudioCommon.h  CINEMO_AUDIO_PARAMS.cfg  CMakeLists.txt  audioStream.cpp  audioStream.h  cinemoAudio.c  cinemoAudio.h  pfcfgCinemo.c  pfcfgCinemo.h  uac2Monitor.c  uac2Monitor.h
Linux/ipod/ipod-cinemo/src/cinemo_auth_plugin/: CMakeLists.txt  cinemo_apple_auth_interface.h  iap2_cinemo_apple_auth_interface.c
Linux/ipod/ipod-cinemo/src/iap2_cinemo_host_plugin/: CMakeLists.txt  cinemo_transport.h  iap2_cinemo_host_datacom.h  iap2_cinemo_usb_host_plugin.c
Linux/ipod/ipod-cinemo/test/: CMakeLists.txt
Linux/ipod/ipod-cinemo/test/iap2_cinemo_test/: CMakeLists.txt  iap2_cinemo_test.c  iap2_cinemo_test.h
Linux/ipod/ipod-common/: CMakeLists.txt
Linux/ipod/ipod-common/config/: adit-ipod-common.pc.in
Linux/ipod/ipod-common/src/: CMakeLists.txt
Linux/ipod/ipod-common/src/auth_plugin/: CMakeLists.txt
Linux/ipod/ipod-common/src/ipod_authentication/: CMakeLists.txt
Linux/ipod/ipod-common/src/ipod_logging/: CMakeLists.txt
Linux/ipod/ipod-common/src/usb_role_switch/: CMakeLists.txt  iap2_defines.h  iap2_usb_gadget_load_modules.c  iap2_usb_gadget_load_modules.h  iap2_usb_otg_switch.c  iap2_usb_otg_switch.h  iap2_usb_power.c  iap2_usb_power.h  iap2_usb_role_switch.c  iap2_usb_role_switch.h  iap2_usb_role_switch_common.c  iap2_usb_role_switch_common.h  iap2_usb_role_switch_config.h  iap2_usb_udc.c  iap2_usb_udc.h  iap2_usb_vendor_request.h  iap2_usb_vendor_request_monitor.c  iap2_usb_vendor_request_send.c
Linux/ipod/ipod-iap1/: CMakeLists.txt
Linux/ipod/ipod-iap1/config/: adit-ipod-iap1.pc.in
Linux/ipod/ipod-iap1/src/: CMakeLists.txt
Linux/ipod/ipod-iap1/src/iap1_dlt_logging/: CMakeLists.txt  iap1_dlt_log.c  iap1_dlt_log.h
Linux/ipod/ipod-iap1/src/ipod_ctrl/: CMakeLists.txt
Linux/ipod/ipod-iap1/src/ipod_plugin/: CMakeLists.txt
Linux/ipod/ipod-iap1/test/: CMakeLists.txt
Linux/ipod/ipod-iap1/test/ipod_ctrl/: CMakeLists.txt
Linux/ipod/ipod-iap2/: CMakeLists.txt
Linux/ipod/ipod-iap2/cmake/modules/: FindLINUX_HEADERS.cmake  FindSYSTEMD.cmake
Linux/ipod/ipod-iap2/config/: adit-ipod-iap2.pc.in
Linux/ipod/ipod-iap2/src/: CMakeLists.txt
Linux/ipod/ipod-iap2/src/common/: adit_logging.h  adit_logging_dlt.h  adit_logging_printf.h
Linux/ipod/ipod-iap2/src/iAP2/: CMakeLists.txt
Linux/ipod/ipod-iap2/src/iap2_gadget/: CMakeLists.txt
Linux/ipod/ipod-iap2/src/iap2_plugin/: CMakeLists.txt
Linux/ipod/ipod-iap2/src/iap2_service/: CMakeLists.txt
Linux/ipod/ipod-iap2/test/: CMakeLists.txt  ipod-auth.func
Linux/ipod/ipod-iap2/test/iap2_endurance_test/: makefile
Linux/ipod/ipod-iap2/test/iap2_iap1_smoketest/: ipod-iap2-iap1-smoketest.sh  makefile
Linux/ipod/ipod-iap2/test/iap2_load_test/: makefile
Linux/ipod/ipod-iap2/test/iap2_location_info_test/: makefile  nmea_Sentences.txt
Linux/ipod/ipod-iap2/test/iap2_multiipod_smoketest/: ADIT-LICENSE.txt  makefile
Linux/ipod/ipod-iap2/test/iap2_service_smoketest/: CMakeLists.txt  iap2-service-demo.service  iap2.socket  iap2_service_smoketest.c  iap2_service_smoketest_config.c  ipod-iap2_service-gadget-smoketest.sh  ipod-iap2_service-host-smoketest.sh  ipod-iap2_service-multihost-smoketest.sh  ipod-iap2_service-smoketest.sh
Linux/ipod/ipod-iap2/test/iap2_smoketest/: CMakeLists.txt  iap2_bluetooth.service  iap2_smoketest.c  iap2_smoketest.h  iap2_smoketest_config.c  ipod-iap2-gadget-smoketest.sh  ipod-iap2-host-smoketest.sh  ipod-iap2-multi-host-smoketest.sh  ipod-iap2-smoketest.sh
Linux/ipod/ipod-iap2/test/iap2_stresstest/: makefile
Linux/ipod/ipod-iap2/test/iap2_telephony_test/: makefile
Linux/ipod/ipod-iap2/test/iap2_test_bt_utility/: makefile
Linux/ipod/ipod-iap2/test/iap2_test_utility/: CMakeLists.txt  iap2_service_test_thread.c  iap2_test_cofig.c  iap2_test_config.h  iap2_test_configuration_pfcfg.c  iap2_test_configuration_pfcfg.h  iap2_test_defines.h  (+9 more)
Linux/ipod/ipod-player/: CMakeLists.txt
Linux/ipod/ipod-player/config/: adit-ipod-player.pc.in
Linux/ipod/ipod-player/src/: CMakeLists.txt
Linux/ipod/ipod-player/test/: CMakeLists.txt
Linux/multimedia/demo/h264-test/: CMakeLists.txt  README  main.c
Linux/netdevmanager/: CMakeLists.txt
Linux/netdevmanager/src/: netdev-manager.c
Linux/rpm-5.4.15/libtpm/: CHANGELOG  LICENSE  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  copyright.h  debug.h  system.h
Linux/rpm-5.4.15/libtpm/libtpm/: Makefile.am  Makefile.in  README
Linux/rpm-5.4.15/libtpm/tpm/: AUTHORS  INSTALL  Makefile.am  Makefile.in  PORTING  README  STATUS  ibmtpm  makefile-common  makefile-en-ac  makefile-freebl  makefile-freebl-ts  makefile-tpm  makefile-ts  makefile-ts.mak  makefile.mak  tpm_admin.c  tpm_audit.c  tpm_crypto.c  tpm_crypto_freebl.c  tpm_daa.c  tpm_io.c  tpm_io.h  tpm_load.c  tpm_load.h  tpm_pcr.c  tpm_server.c  tpm_startup.c  tpm_store.c  tpm_store.h  tpm_svnrevision.c  tpm_ticks.c  tpm_time.c  tpm_transport.c  tpm_types.h
Linux/rpm-5.4.15/libtpm/tpm_proxy/: Makefile.am  Makefile.in
Linux/rpm-5.4.15/neon/test/: Makefile.am  Makefile.in  largefile.c  run.sh  ssl.c
QNXミドル/src/monitor/: CMakeLists.txt  dlt-monitor.c  dlt-monitor.h  dlt-sysmon.conf
QNXミドル/src/monitor/cpu/: CMakeLists.txt  dlt-monitor-cpu.c
QNXミドル/src/monitor/filesystem/: CMakeLists.txt  dlt-monitor-filesystem.c
QNXミドル/src/monitor/io/: CMakeLists.txt  dlt-monitor-io.c
QNXミドル/src/monitor/memory/: CMakeLists.txt  dlt-monitor-memory.c
QNXミドル/src/monitor/network/: CMakeLists.txt  dlt-monitor-network.c
QNXミドル/src/monitor/process/: CMakeLists.txt  dlt-monitor-process.c  dlt-monitor-process.h
QNXミドル/src/monitor/product/: CMakeLists.txt  dlt-monitor-adit-product.c
(+6113 files in other folders)
