#################################################################################
# Makefile for libtpm top directory						#
# $Id: Makefile.am 4261 2011-01-05 16:47:20Z stefanb $				#
################################################################################

EXTRA_DIST =
#	comp-chardev.sh \
#	comp-serialp.sh \
#	comp-sockets.sh \
#	comp-unixio.sh

ACLOCAL_AMFLAGS=-I m4

SUBDIRS = lib @WITH_LIBTPM_UTILS_SUBDIR@
